--- a/shop/accesorios/index.html
+++ b/shop/accesorios/index.html
@@ -998,7 +998,7 @@
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                            HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP
+                                            ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20
                                         </p>
                                     </div>
                                 </div>
@@ -1089,9 +1089,11 @@
                             </div>
 
                             <div class="et_pb_column et_pb_column_1_2 et_pb_column_5_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
+
                                 <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-                                    <div class="et_pb_text_inner"><p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.<hr></p>
-                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
+                                    <div class="et_pb_text_inner">
+                                        <p>© Herbalist Smoke Shop 2022 | ® Todos los Derechos Reservados.<hr></p>
+                                        <p>🇨🇷 Tranquilino Sáenz Flores, Heredia, Costa Rica.</p>
                                     </div>
                                 </div>
 
@@ -1100,7 +1102,9 @@
                                         <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de Privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
                                     </div>
                                 </div>
+
                             </div>
+
 
                         </div>
 
@@ -1112,14 +1116,14 @@
 
                                 <div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
-                                        <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.<hr></p>
-                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
+                                        <p>© Herbalist Smoke Shop 2022 | ® Todos los Derechos Reservados.<hr></p>
+                                        <p>🇨🇷 Tranquilino Sáenz Flores, Heredia, Costa Rica.</p>
                                     </div>
                                 </div>
 
-                                <div class="et_pb_module et_pb_text et_pb_text_9_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
+                                <div class="et_pb_module et_pb_text et_pb_text_11_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
-                                        <p><a href="mailto:shop@herbalist.ml">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a> </p>
+                                        <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/">Política de Privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
                                     </div>
                                 </div>
 
