--- a/shop/index.html
+++ b/shop/index.html
@@ -444,9 +444,9 @@ heateor_sss_vertical_sharing{
                                                     </div>-->
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg); background-size: 100%">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2>Los mejores accesorios 420</h2>
+                                                                    <h2>Altamente curado</h2>
                                                                     <a class="more btn btn--black" target="" href="#shop-herbalist">
                                                                         <span class="text">Shop</span>
                                                                         <span class="bg"></span>
