--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
                                                        </div>
                                                    </div>
 
-                                                        <!--<div class="owl-slider item">
-                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg);">
+                                                        <div class="owl-slider item">
+                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/VapeLP_Desktop_LRTE_Optimized.gif);">
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2>Altamente Curado</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
@@ -428,8 +428,7 @@
                                                                        </a>
                                                                    </div>
                                                                </div>
-                                                           </div>-->
-
+                                                           </div>
 
                                                     </div>
                                                 </div>
@@ -442,7 +441,7 @@
                                                                 nav: true,
                                                                 dots: true,
                                                                 dotsEach: true,
-                                                                autoplay: false,
+                                                                autoplay: true,
                                                                 // autoplayTimeout: varAutoTime,
                                                                 // autoplay:false,
                                                                 // autoplayTimeout:3000,
