--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme">
 
-                                                        <div class="owl-slider item">
+                                                        <!--<div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                             <div class="slider-content et_pb_row">
 
@@ -416,7 +416,7 @@
 
                                                            </div>
                                                        </div>
-                                                   </div>
+                                                   </div>-->
 
                                                         <div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/VapeLP_Desktop_LRTE_Optimized.gif);">
@@ -441,7 +441,7 @@
                                                                 nav: true,
                                                                 dots: true,
                                                                 dotsEach: true,
-                                                                autoplay: true,
+                                                                autoplay: false,
                                                                 // autoplayTimeout: varAutoTime,
                                                                 // autoplay:false,
                                                                 // autoplayTimeout:3000,
