--- a/shop/index.html
+++ b/shop/index.html
@@ -446,7 +446,7 @@ heateor_sss_vertical_sharing{
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2>Highly Curated 🍃</h2>
+                                                                    <h2>Altamente Curada 🍃</h2>
                                                                     <a class="more btn btn--black" target="" href="#shop-herbalist">
                                                                         <span class="text">Shop</span>
                                                                         <span class="bg"></span>
