--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                                    </div>-->
 
                                                         <div class="owl-slider item">
-                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
+                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);background-size: 100% !important;">
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2>Plantas para el Bienestar™</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
