--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <link rel='stylesheet' id='divi-style-css'  href='https://www.herbalist.ml/css/divi-child/style.css?ver=1.2.0' type='text/css' media='all' />
 
     <!-- custom css -->
-    <link rel='stylesheet'  href='https://www.herbalist.ml/css/custom.css?v3' type='text/css' media='all' />
+    <link rel='stylesheet'  href='https://www.herbalist.ml/css/custom.css?v32' type='text/css' media='all' />
     <!-- custom css -->
 
     <link rel='shortlink' href='https://www.herbalist.ml/' />
@@ -419,7 +419,7 @@
                                                    </div>-->
 
                                                         <div class="owl-slider item">
-                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);background-size: 100% !important;">
+                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2>Plantas para el Bienestar™</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
