--- a/index.html
+++ b/index.html
@@ -403,11 +403,11 @@
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme">
 
-                                                        <!--<div class="owl-slider item">
+                                                        <div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text herbalist-kit">Plantas para el bienestar</h2>
+                                                                <h2 class="custom-slider-text herbalist-kit">Plantas para el bienestar™</h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                       <span class="text">Shop</span>
@@ -416,7 +416,7 @@
 
                                                            </div>
                                                        </div>
-                                                   </div>-->
+                                                   </div>
 
                                                         <div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
