--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                                                         <div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
                                                                    <div class="slider-content et_pb_row">
-                                                                       <h2>Los mejores accesorios</h2>
+                                                                       <h2>Accesorios 420</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                            <span class="text">Shop</span>
                                                                            <span class="bg"></span>
