--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text herbalist-kit">Enrola</h2>
+                                                                <h2 class="custom-slider-text herbalist-kit">Prende</h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                       <span class="text">Shop</span>
