--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>ENTREGA EN 45 MINUTOS 🛵</p></div>
+                                <div class="et_pb_text_inner"><p>ENTREGA EN 45 MINUTOS 🛵💨</p></div>
                             </div>
                         </div>
                     </div>
@@ -908,7 +908,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 <script type='text/javascript' src='https://www.herbalist.ml/wp-includes/js/wp-embed.min.js?ver=5.8.1' id='wp-embed-js'></script>
 
 <!--Start of Tawk.to Script-->
-<script type="text/javascript">
+<!--<script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
         var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -918,7 +918,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
         s1.setAttribute('crossorigin','*');
         s0.parentNode.insertBefore(s1,s0);
     })();
-</script>
+</script>-->
 <!--End of Tawk.to Script-->
 
 </body>
