--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -846,7 +846,7 @@
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                            ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20
+                                            HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • ACCESORIOS 4:20
                                         </p>
                                     </div>
                                 </div>
@@ -868,13 +868,12 @@
 
                                 <div class="et_pb_with_border et_pb_module et_pb_text et_pb_text_1_tb_footer et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
 
-                                    <div class="et_pb_text_inner"><h2>Obtén un 5% de descuento</h2></div>
+                                    <div class="et_pb_text_inner"><h2>Obtén un 5% de descuento!</h2></div>
 
                                 </div>
 
-
                                 <div class="et_pb_module et_pb_text et_pb_text_2_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
-                                    <div class="et_pb_text_inner"><h3>Además, obtén ofertas exclusivas, puntos de viajero frecuente y más.</h3></div>
+                                    <div class="et_pb_text_inner"><h3>Además, obtén ofertas exclusivas y mucho más.</h3></div>
                                 </div><div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
 
 
@@ -919,6 +918,14 @@
                                         <i class="fab fa-facebook sap-icon"></i>
                                     </a>
                                 </div>
+
+                                <div class="et_pb_module et_pb_image et_pb_image_2_tb_footer">
+                                    <a href="https://open.spotify.com/playlist/7xzASO4w9izIHRcdOKvySW?si=9f4c384318cb43b1" target="_blank" class="custom-a-social">
+                                        <i class="fab fa-spotify sap-icon"></i>
+                                    </a>
+                                </div>
+
+
 
                                 <!--<div class="et_pb_module et_pb_image et_pb_image_1_tb_footer">
                                  <a href="https://www.tiktok.com/@herbalist" target="_blank">
