--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
                                                                 <h2 class="custom-slider-text herbalist-kit">Prende</h2>
 
-                                                                <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                       <span class="text">Shop</span>
                                                                    <span class="bg"></span>
                                                                </a>
@@ -422,7 +422,7 @@
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2>Relájate</h2>
-                                                                       <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                       <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                            <span class="text">Shop</span>
                                                                            <span class="bg"></span>
                                                                        </a>
