--- a/index.html
+++ b/index.html
@@ -406,9 +406,7 @@
                                                         <div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                             <div class="slider-content et_pb_row">
-
                                                                 <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1</h2>
-
                                                                 <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                       <span class="text">Shop</span>
                                                                    <span class="bg"></span>
@@ -421,7 +419,7 @@
                                                         <div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
                                                                    <div class="slider-content et_pb_row">
-
+                                                                       <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                            <span class="text">Shop</span>
                                                                            <span class="bg"></span>
