--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -236,7 +236,7 @@
 
                                         <ul id="mega-menu-secondary-menu" class="mega-menu max-mega-menu mega-menu-horizontal mega-no-js" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
                                             <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1858' id='mega-menu-item-1858'>
-                                                <a class="mega-menu-link" target="_blank" href="https://wa.me/5060170413/?text=Por favor escríba aquí su consulta:)" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
+                                                <a class="mega-menu-link" target="_blank" href="https://www.smokeshop.ml/shop/Por favor escríba aquí su consulta:)" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
                                             </li>
                                         </ul>
 
@@ -325,7 +325,7 @@
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_2_tb_header inline-block">
-                                <a href="https://wa.me/5060170413/?text=" target="_blank" style="color: black !important;">
+                                <a href="https://www.smokeshop.ml/shop/" target="_blank" style="color: black !important;">
                                     <i class="fab fa-whatsapp sap-icon"></i>
                                 </a>
                             </div>
@@ -457,7 +457,7 @@
                                                             <p class="custom-btn-price">120 x 120 x 200 cm</p>
                                                             <p class="custom-btn-price"><strong>$190.50</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/5060170413/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -482,7 +482,7 @@
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$100</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/5060170413/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -506,7 +506,7 @@
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$150.00</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/5060170413/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -529,7 +529,7 @@
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$99.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/5060170413/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -561,7 +561,7 @@
                                                             <p class="custom-btn-price">200W</p>
                                                             <p class="custom-btn-price"><strong>$300</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/5060170413/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -586,7 +586,7 @@
                                                         <p class="custom-btn-price">120W</p>
                                                         <p class="custom-btn-price"><strong>$190</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/5060170413/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -610,7 +610,7 @@
                                                         <p class="custom-btn-price">150W</p>
                                                         <p class="custom-btn-price"><strong>$188.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/5060170413/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -632,7 +632,7 @@
                                                         <p class="custom-btn-price">250w</p>
                                                         <p class="custom-btn-price"><strong>$320.50</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/5060170413/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -732,7 +732,7 @@
 
 
                                 <div class="et_pb_module et_pb_image et_pb_image_1_tb_footer">
-                                    <a href="https://wa.me/5060170413/?text=Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
+                                    <a href="https://www.smokeshop.ml/shop/Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
                                         <i class="fab fa-whatsapp sap-icon"></i>
                                     </a>
                                 </div>
