--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -393,7 +393,11 @@
                                                             <div class="owl-slider item">
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/purple.png)">
                                                                     <div class="slider-content et_pb_row">
-
+                                                                        <h2 class="custom-slider-text herbalist-kit">Sí al autocultivo</h2>
+                                                                        <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                            <span class="text">Shop</span>
+                                                                            <span class="bg"></span>
+                                                                        </a>
                                                                     </div>
                                                                 </div>
                                                             </div>
