--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 <script type='text/javascript' src='https://www.herbalist.ml/wp-includes/js/wp-embed.min.js?ver=5.8.1' id='wp-embed-js'></script>
 
 <!--Start of Tawk.to Script-->
-<!--<script type="text/javascript">
+<script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
         var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -921,7 +921,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
         s1.setAttribute('crossorigin','*');
         s0.parentNode.insertBefore(s1,s0);
     })();
-</script>-->
+</script>
 <!--End of Tawk.to Script-->
 
 </body>
