--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
                                                         <div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                             <div class="slider-content et_pb_row">
-                                                                <h2 class="custom-slider-text herbalist-kit">smoke</h2>
+                                                                <h2 class="custom-slider-text herbalist-kit">Smoke</h2>
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                      <span class="text">smoke shop</span>
+                                                                      <span class="text">Smoke Shop</span>
                                                                    <span class="bg"></span>
                                                                </a>
 
@@ -419,9 +419,9 @@
                                                         <div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
                                                                    <div class="slider-content et_pb_row">
-                                                                       <h2 class="custom-slider-text herbalist-kit">shop</h2>
+                                                                       <h2 class="custom-slider-text herbalist-kit">Shop</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                           <span class="text">smoke shop</span>
+                                                                           <span class="text">Smoke Shop</span>
                                                                            <span class="bg"></span>
                                                                        </a>
                                                                    </div>
