--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -526,7 +526,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡24.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/beaker-bong-rojo/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
