--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -548,7 +548,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$59.99</strong> <span class="cs-sold-out">agotado</span> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                            <a class="more btn btn--black" target="" href="#">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -1007,7 +1007,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>$69.99</strong> <span class="cs-sold-out">agotado</span> </p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                        <a class="more btn btn--black" target="" href="#">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
@@ -1079,7 +1079,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>$59.99</strong> <span class="cs-sold-out">agotado</span> </p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                        <a class="more btn btn--black" target="" href="#">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
@@ -1151,7 +1151,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$55.99</strong> <span class="cs-sold-out">agotado</span> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                            <a class="more btn btn--black" target="" href="#">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
