--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -520,9 +520,9 @@
                                                 <div class="et_pb_blurb_container">
                                                     <h2 class="et_pb_module_header"><span>THE FISH SCALE PIPE</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>₡6.000</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡6.000</strong> <span class="cs-sold-out">agotado</span> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                            <a class="more btn btn--black" target="" href="#">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -544,7 +544,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9.500</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/pipa-de-silicon-2-en-1/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
