--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -572,7 +572,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡7.500</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/pipas-de-vidrio-multicolor/">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
