--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -422,7 +422,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡19.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/vapes/bateria-evod-510/">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -446,7 +446,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/vapes/bateria-vertex-slim-510/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -467,7 +467,7 @@
                                                 <div class="et_pb_blurb_container">
                                                     <h2 class="et_pb_module_header"><span>Kandypens Slim Vaporizer</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$44.95</strong></p>
+                                                        <p class="custom-btn-price"><strong>$44.95</strong> <span class="cs-sold-out">agotado</span></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
