--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1228,7 +1228,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
                                 <div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
                                     <p>© Herbalist Smoke Shop 2022 | ® Todos los Derechos Reservados.<hr></p>
-                                    <p>🇨🇷 Tranquilino Sáenz Flores, Heredia, Costa Rica.</p>
+                                    <p>📍 Barrio Escalante, San José, Costa Rica.</p>
                                 </div>
                             </div>
 
