--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2 class="custom-slider-text herbalist-kit">Shop</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                           <span class="text">Smoke Shop</span>
-                                                                           <span class="bg"></span>
+                                                                           <span class="text">Herbalist</span>
+                                                                           <span class="bg">Smoking essentials</span>
                                                                        </a>
                                                                    </div>
                                                                </div>
@@ -418,7 +418,7 @@
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2 class="custom-slider-text herbalist-kit">Smoke</h2>
+                                                                    <h2 class="custom-slider-text herbalist-kit">Herbalist</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                         <span class="text">Smoke Shop</span>
                                                                         <span class="bg"></span>
