--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
                                                         <div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
                                                                    <div class="slider-content et_pb_row">
-                                                                       <h2 class="custom-slider-text herbalist-kit">Shop</h2>
+                                                                       <h2 class="custom-slider-text herbalist-kit">Herbalist</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                           <span class="text">Herbalist</span>
+                                                                           <span class="text">Smoking essentials</span>
                                                                            <span class="bg">Smoking essentials</span>
                                                                        </a>
                                                                    </div>
