--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2 class="custom-slider-text herbalist-kit">Natural Healing</h2>
+                                                                    <h2 class="custom-slider-text herbalist-kit">Highly Curated 🍃</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                         <span class="text">Shop Now</span>
                                                                         <span class="bg"></span>
