--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2 class="custom-slider-text herbalist-kit">Smoking Essentials </h2>
+                                                                    <h2 class="custom-slider-text herbalist-kit">Smoking Essentials</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                         <span class="text">Shop Now</span>
                                                                         <span class="bg"></span>
@@ -464,7 +464,7 @@
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Lo mejor en bongs, pipas y accesorios para fumar</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Lo mejor en bongs, pipas, cbd y accesorios para fumar</h1></div>
                                             </div>
                                         </div>
                                     </div>
