--- a/shop/index.html
+++ b/shop/index.html
@@ -1549,12 +1549,12 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
                                 </div>
 
                                 <div class="et_pb_module et_pb_image et_pb_image_2_tb_footer">
-                                    <a href="https://www.instagram.com/415herbalist/" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-instagram sap-icon" style="color: black;"></i></span>
+                                    <a href="https://www.instagram.com/herbalist.ml/" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-instagram sap-icon" style="color: black;"></i></span>
                                     </a>
                                 </div>
 
                                 <div class="et_pb_module et_pb_image et_pb_image_3_tb_footer">
-                                    <a href="https://www.facebook.com/415herbalist/" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-facebook sap-icon" style="color: black;"></i></span>
+                                    <a href="https://www.facebook.com/herbalist.ml/" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-facebook sap-icon" style="color: black;"></i></span>
                                     </a>
                                 </div>
 
