--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme">
 
-                                                        <div class="owl-slider item">
+                                                       <!-- <div class="owl-slider item"> 
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2 class="custom-slider-text herbalist-kit">Highly Curated 🍃</h2>
@@ -413,7 +413,7 @@
                                                                        </a>
                                                                    </div>
                                                                </div>
-                                                           </div>
+                                                           </div>-->
 
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
