--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
     <meta name="description" content="Herbalist es la mejor smoke shop online con la mejor colección de bongs, pipas, vaporizadores, CBD y accesorios para fumar a la venta." />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="https://www.herbalist.ml/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://www.herbalist.ml/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://www.herbalist.ml/img/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" href="https://www.herbalist.ml/img/favicon-32x32.png" />
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
@@ -78,7 +75,7 @@
 
     <link rel='stylesheet'  href='https://www.herbalist.ml/css/divi/et-critical-inline-css.css?v1' type='text/css' media='all' />
     <link rel="stylesheet" id="et-core-unified-2-cached-inline-styles" href="https://www.herbalist.ml/css/et-core-unified-2.min.css?v5" />
-    <link rel="preload" as="style" id="et-core-unified-tb-12-tb-31-deferred-2-cached-inline-styles" href="https://www.herbalist.ml/css/et-core-unified-tb-12-tb-31-deferred-2.min.css?v9323" onload="this.onload=null;this.rel='stylesheet';" />
+    <link rel="preload" as="style" id="et-core-unified-tb-12-tb-31-deferred-2-cached-inline-styles" href="https://www.herbalist.ml/css/et-core-unified-tb-12-tb-31-deferred-2.min.css?v93" onload="this.onload=null;this.rel='stylesheet';" />
 
     <style type="text/css">/** Mega Menu CSS: fs **/</style>
 
